fixed tooltip visibility of summary bubble

--- a/src/components/dataviz/FForce_X/style.scss
+++ b/src/components/dataviz/FForce_X/style.scss
@@ -5,7 +5,7 @@
   background-color: $black;
   width: 275px;
   padding: 1rem;
-
+  z-index: 11;
 
   .tt_body{
     padding-top: 0.5rem;
